website/versioned_docs/version-0.7.0/cli-reference/gitops_get_template.md
## gitops get template

Display one or many CAPI templates

```
gitops get template [flags]
```

### Examples

```

# Get all CAPI templates
gitops get templates

# Get all AWS CAPI templates
gitops get templates --provider aws

# Show the parameters of a CAPI template
gitops get template <template-name> --list-parameters
		
```

### Options

```
  -h, --help              help for template
      --list-parameters   Show parameters of CAPI template
      --list-profiles     Show profiles of CAPI template
      --provider string   Filter templates by provider. Supported providers: aws azure digitalocean docker openstack packet vsphere
```

### Options inherited from parent commands

```
  -e, --endpoint string            The Weave GitOps Enterprise HTTP API endpoint
      --insecure-skip-tls-verify   If true, the server's certificate will not be checked for validity. This will make your HTTPS connections insecure
      --namespace string           The namespace scope for this operation (default "flux-system")
  -v, --verbose                    Enable verbose output
```

### SEE ALSO

* [gitops get](gitops_get.md)	 - Display one or many Weave GitOps resources

###### Auto generated by spf13/cobra on 12-Apr-2022
